# sudoku-cpp

./: .clang-format  .clang-tidy  .gcovr.cfg  .gitignore  ACKNOWLEDGMENTS.md  CMakeLists.txt  CONAN_PROFILES.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  conan_profile  conanfile.py  requirements.txt
.github/actions/install-qt-deps/: action.yml
.github/workflows/: ci.yml  nightly.yml
docs/: AAA_STYLE_GUIDE.md  ARCHITECTURE_PRINCIPLES.md  CODE_QUALITY.md  CONAN_PROFILES.md  CPP_STYLE_GUIDE.md  DEBUGGING_GUIDE.md  ITIMEPROVIDER_PATTERN.md  OBSERVABLE_PATTERN.md  PERFORMANCE_MEASUREMENTS.md  QUICK_REFERENCE.md  TDD_GUIDE.md  TRAINING_MODE.md  TRAINING_MODE_ROADMAP.md  TROUBLESHOOTING.md
include/core/: board.h  board_serializer.h  board_utils.h  constants.h
include/infrastructure/: app_directory_manager.h
resources/locales/: de.yaml  en.yaml
scripts/: baseline_benchmark.sh  build_windows.bat  build_windows_debug.bat  copy_imgui_backends.bat  coverage.sh  cpd.sh  cppcheck.sh  dead-code.sh  format.sh  iwyu.sh  pgo_build.sh  pre-commit  run_tests_windows.bat  setup-hooks.sh  tidy-diff.sh  tidy.sh
src/: main.cpp
src/core/: auto_save_manager.cpp  auto_save_manager.h  backtracking_solver.cpp  backtracking_solver.h  board.cpp  board_serializer.cpp  candidate_grid.h  command_history.cpp  command_history.h  constraint_state.cpp  constraint_state.h  cpu_features.cpp  cpu_features.h  di_container.cpp  di_container.h  encryption_manager.cpp  encryption_manager.h  game_commands.cpp  game_commands.h  game_validator.cpp  game_validator.h  i_command.h  i_game_validator.h  i_localization_manager.h  i_puzzle_generator.h  i_puzzle_rater.h  i_save_manager.h  i_settings_manager.h  i_solving_strategy.h  i_statistics_manager.h  i_sudoku_solver.h  i_time_provider.h  i_training_exercise_generator.h  i_training_statistics_manager.h  localization_manager.cpp  localization_manager.h  localized_explanations.h  mock_localization_manager.h  observable.h  puzzle_generator.cpp  (+39 more)
src/core/strategies/: als_helpers.h  als_xy_wing_strategy.h  als_xz_strategy.h  avoidable_rectangle_strategy.h  box_line_reduction_strategy.h  bug_strategy.h  coloring_helpers.h  death_blossom_strategy.h  empty_rectangle_strategy.h  finned_jellyfish_strategy.h  finned_swordfish_strategy.h  finned_x_wing_strategy.h  fish_helpers.h  forcing_chain_strategy.h  franken_fish_strategy.h  grouped_x_cycles_strategy.h  hidden_pair_strategy.h  hidden_quad_strategy.h  hidden_single_strategy.h  hidden_triple_strategy.h  hidden_unique_rectangle_strategy.h  jellyfish_strategy.h  multi_coloring_strategy.h  naked_pair_strategy.h  naked_quad_strategy.h  naked_single_strategy.h  naked_triple_strategy.h  nice_loop_strategy.h  pointing_pair_strategy.h  remote_pairs_strategy.h  simple_coloring_strategy.h  skyscraper_strategy.h  sue_de_coq_strategy.h  swordfish_strategy.h  three_d_medusa_strategy.h  two_string_kite_strategy.h  unique_rectangle_strategy.h  vwxyz_wing_strategy.h  w_wing_strategy.h  wing_helpers.h  (+6 more)
src/infrastructure/: app_directory_manager.cpp  log_manager.cpp  log_manager.h
src/model/: game_state.cpp  game_state.h
src/view/: font_manager.cpp  font_manager.h  main_window.cpp  main_window.h  main_window_board.cpp  main_window_dialogs.cpp  main_window_input.cpp  main_window_menus.cpp  main_window_training.cpp  sudoku_board_widget.cpp  sudoku_board_widget.h  toast_notification.cpp  toast_notification.h  toast_widget.cpp  toast_widget.h  training_board_widget.cpp  training_board_widget.h  training_number_pad.cpp  training_number_pad.h  training_widget.cpp  training_widget.h
src/view_model/: game_view_model.cpp  game_view_model.h  game_view_model_board.cpp  game_view_model_hints.cpp  game_view_model_state.cpp  game_view_model_undo.cpp  training_view_model.cpp  training_view_model.h
tests/: .clang-tidy  CMakeLists.txt  profile_expert_puzzles.cpp  profile_hard_puzzles.cpp  profile_puzzle_generation.cpp
tests/benchmarks/: CMakeLists.txt  README.md  backtracking_rate_benchmark.cpp  puzzle_generation_benchmark.cpp  solver_path_benchmark.cpp
tests/benchmarks/configs/: quick.yaml  standard.yaml  thorough.yaml
tests/helpers/: benchmark_utils.cpp  benchmark_utils.h  benchmark_utils_impl.h  memory_monitor.cpp  memory_monitor.h  mock_localization_manager.h  mock_settings_manager.h  test_utils.cpp  test_utils.h
tests/integration/: CMakeLists.txt  test_game_view_model_integration.cpp  test_save_manager_integration.cpp  test_statistics_manager_integration.cpp
tests/ui/: CMakeLists.txt  test_board_interaction.cpp  test_fixture.h  test_keyboard_handling.cpp  test_main_window_construction.cpp  test_menu_toolbar_actions.cpp  test_training_widget.cpp  test_view_model_binding.cpp
tests/unit/: CMakeLists.txt  test_als_xy_wing_strategy.cpp  test_als_xz_strategy.cpp  test_app_directory_manager.cpp  test_auto_notes.cpp  test_auto_save.cpp  test_avoidable_rectangle_strategy.cpp  test_backtracking_solver.cpp  test_basic_infrastructure.cpp  test_board.cpp  test_board_serializer.cpp  test_box_line_reduction_strategy.cpp  test_bug_strategy.cpp  test_candidate_grid.cpp  test_command_history.cpp  test_constraint_propagation_benchmark.cpp  test_constraint_state.cpp  test_cpu_features.cpp  test_death_blossom_strategy.cpp  test_di_container.cpp  test_empty_rectangle_strategy.cpp  test_encryption_manager.cpp  test_finned_jellyfish_strategy.cpp  test_finned_swordfish_strategy.cpp  test_finned_x_wing_strategy.cpp  test_forcing_chain_strategy.cpp  test_format_techniques.cpp  test_franken_fish_strategy.cpp  test_game_commands.cpp  test_game_state.cpp  test_game_validator.cpp  test_game_validator_branches.cpp  test_game_view_model_commands.cpp  test_game_view_model_conflicts.cpp  test_game_view_model_edge_cases.cpp  test_game_view_model_hints.cpp  test_game_view_model_reset.cpp  test_grouped_x_cycles_strategy.cpp  test_hidden_pair_strategy.cpp  test_hidden_quad_strategy.cpp  (+82 more)
